# openapi-yagen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.musl  README.md  build-musl.sh  build-uclibc.sh  conanfile.txt
.github/workflows/: build.yml
cli/: CMakeLists.txt  main.cpp
cli/commands/: generate_command.cpp  generate_command.h
examples/: model.h  run.sh
examples/simple_cpp_models_generator/: comment.j2  generator.yml  head.h.j2  includes.h.j2  lib.js  main.js  model.h.j2
lib/: CMakeLists.txt  openapi_generator.cpp  openapi_generator.h
lib/common/: CMakeLists.txt  function.h  json_tools.cpp  json_tools.h  node.cpp  node.h  node_walker.cpp  node_walker.h  process_executor.cpp  process_executor.h  std_tools.h  string_tools.cpp  string_tools.h  yaml_or_json_parser.cpp  yaml_or_json_parser.h
lib/filesystem/: CMakeLists.txt  definitions.h  dir_file_reader_backend.cpp  dir_file_reader_backend.h  dir_file_writer.cpp  dir_file_writer.h  file_post_processor.cpp  file_post_processor.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  remote_file_reader_backend.cpp  remote_file_reader_backend.h  tools.cpp  tools.h  zip_file_reader_backend.cpp  zip_file_reader_backend.h
lib/generator/: CMakeLists.txt  functions.cpp  functions.h  generator_metadata.cpp  generator_metadata.h  openapi_generator.cpp  openapi_generator.h  schema_validator.cpp  schema_validator.h
lib/js/: CMakeLists.txt  definitions.h  executor.cpp  executor.h  tools.cpp  tools.h
lib/logger/: CMakeLists.txt  console_logger.cpp  console_logger.h  logger.cpp  logger.h
lib/model/: generator_metadata.cpp
lib/templates/: CMakeLists.txt  definitions.h  inja_template_renderer.cpp  inja_template_renderer.h  template_renderer.cpp  template_renderer.h
test/: CMakeLists.txt  common_test.cpp  generator_test.cpp  parser_test.cpp  vfs_test.cpp
test/common/: tools.cpp  tools.h
test/resources/: generator.yml  generator_with_schema.yml
